--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2003-07-13 Enrico Sersale  <enrico@imago.ro>
+
+  * Utilities/findfile/findfile.m
+    fixed some bugs exposed by the recent changes in DO;
+
+2003-07-10 Enrico Sersale  <enrico@imago.ro>
+
+  * GWorkspace/TShelf
+    a new Tabbed Shelf added.
 
 2003-07-09 Enrico Sersale  <enrico@imago.ro>
 
