*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@17247 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-17 Enrico Sersale  <enrico@imago.ro>
+
+  * GWorkspace/TShelf/TShelfView.m
+    in -drawRect: uses NSBezierPath instead of ps operators.
+
 2003-07-13 Enrico Sersale  <enrico@imago.ro>
 
   * Utilities/findfile/findfile.m
