--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-07-18 Enrico Sersale  <enrico@imago.ro>
+
+  * GWorkspace/Resources
+    added some .nib files that was not created after the last try of 
+    building GWorkspace on OS X
+
 2003-07-17 Enrico Sersale  <enrico@imago.ro>
 
   * GWorkspace/TShelf/TShelfView.m
