*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@17387 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-07-29 Enrico Sersale  <enrico@imago.ro>
+
+  * GWorkspace/FileOperations/FileOperation.m
+    changed all the occourrencies of NSPort with NSMessagePort
+
 2003-07-18 Enrico Sersale  <enrico@imago.ro>
 
   * GWorkspace/Resources
