--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-11 Enrico Sersale  <enrico@imago.ro>
+
+  * in many places: changed "DeskTop" with Desktop"
+    (suggestion & patch by Christopher Culver <crculver@users.sourceforge.net>
+
 2003-07-29 Enrico Sersale  <enrico@imago.ro>
 
   * GWorkspace/FileOperations/FileOperation.m
