*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@17549 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-08-26 Enrico Sersale  <enrico@imago.ro>
+
+  * GWorkspace/GWorkspace.m
+    -viewerRootedAtPath: new method.
+    in -selectFile:inFileViewerRootedAtPath: uses the new method.
+
 2003-08-11 Enrico Sersale  <enrico@imago.ro>
 
   * in many places: changed "DeskTop" with Desktop"
