*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@17584 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-09-01 Enrico Sersale  <enrico@imago.ro>
+
+  * GWorkspace/GWorkspace.m
+    in -iconForFile:ofType: handled the case of a 128x128 thumbnail icon
+    returned by NSWorkspace.
+
 2003-08-26 Enrico Sersale  <enrico@imago.ro>
 
   * GWorkspace/GWorkspace.m
