*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@17722 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-09-26 Enrico Sersale  <enrico@imago.ro>
+
+  * in many files: changed some occourrencies of the macro "new" with
+    [[ alloc] init] due of problems with the Apple gcc.
+
 2003-09-01 Enrico Sersale  <enrico@imago.ro>
 
   * GWorkspace/GWorkspace.m
