--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,9 @@
   * GWRemote/gwsd/gwsd.m in -initWithRemote:connection:
     calls -enableMultipleThreads on the first connection.
 
+  * GWRemote doesn't depend anymore upon libGWorkspace.
+    Implemented a Browser class and some other things.
+
 2003-09-01 Enrico Sersale  <enrico@imago.ro>
 
   * GWorkspace/GWorkspace.m
