2003-10-03 Enrico Sersale  <enrico@imago.ro>
  * GWorkspace/Inspectors/Tools.m
    after setting the default application, the applications icons
    are now shown correctly.

2003-10-01 Enrico Sersale  <enrico@imago.ro>

  * Version 0.6

  * GWLib/GWProtocol.h and GWorkspace/GWorkspace.m
    -sortedDirectoryContentsAtPath:
    -checkHiddenFiles:atPath:
    -setCachedMax:
    -addWatcherForPath:
    -removeWatcherForPath:
    -lockFiles:inDirectoryAtPath:
    -unLockFiles:inDirectoryAtPath:
    -isLockedPath:
    -existsAndIsDirectoryFileAtPath:
    -typeOfFileAt:
    -isPakageAtPath:
    -sortTypeForDirectoryAtPath:
    -setSortType:forDirectoryAtPath:
    -setDefSortType:
    -defSortType
    -setHideSysFiles:
    -hideSysFiles
    -iconForFile:ofType:
    -smallIconForFile:
    -smallIconForFiles:
    -smallHighlightIcon
    -setUseThumbnails:
    -imageExtensions
    all these methods have been moved in GWLib

  * GWLib/GWLib [h m]
    + (id)workspaceApp
    new method.

2003-09-26 Enrico Sersale  <enrico@imago.ro>

  * in many files: changed some occourrencies of the macro "new" with
    [[ alloc] init] due of problems with the Apple gcc.

  * GWRemote/gwsd/gwsd.m in -initWithRemote:connection:
    calls -enableMultipleThreads on the first connection.

  * GWRemote doesn't depend anymore upon libGWorkspace.
    Implemented a Browser class and some other things.

2003-09-01 Enrico Sersale  <enrico@imago.ro>

  * GWorkspace/GWorkspace.m
    in -iconForFile:ofType: handled the case of a 128x128 thumbnail icon
    returned by NSWorkspace.

2003-08-26 Enrico Sersale  <enrico@imago.ro>

  * GWorkspace/GWorkspace.m
    -viewerRootedAtPath: new method.
    in -selectFile:inFileViewerRootedAtPath: uses the new method.

2003-08-11 Enrico Sersale  <enrico@imago.ro>

  * in many places: changed "DeskTop" with Desktop"
    (suggestion & patch by Christopher Culver <crculver@users.sourceforge.net>

2003-07-29 Enrico Sersale  <enrico@imago.ro>

  * GWorkspace/FileOperations/Fi

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-10-03 Enrico Sersale  <enrico@imago.ro>
+
+  * GWorkspace/Inspectors/Tools.m
+    after setting the default application, the applications icons
+    are now shown correctly.
+
 2003-10-01 Enrico Sersale  <enrico@imago.ro>
 
   * Version 0.6
