2003-10-06 Enrico Sersale  <enrico@imago.ro>
  * GWorkspace/Desktop/DesktopView.m
    GWorkspace/Shelf/Shelf.m
    in -fileSystemDidChange: fixed a bug that leaved a renamed icon locked.


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@17785 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-10-06 Enrico Sersale  <enrico@imago.ro>
+
+  * GWorkspace/Desktop/DesktopView.m
+    GWorkspace/Shelf/Shelf.m  
+    in -fileSystemDidChange: fixed a bug that leaved a renamed icon locked. 
+
 2003-10-03 Enrico Sersale  <enrico@imago.ro>
 
   * GWorkspace/FileOperations/FileOperation.m
