2003-10-07 Enrico Sersale  <enrico@imago.ro>
  * GWorkspace/GWorkspace.m
    Added a "Do you really want to quit?" dialog
    in -applicationShouldTerminate:.
    Added some keyEquivalents to the tabbed shelf menues.

  * GWorkspace/TShelf/TShelfWin.m
    Reduced the height of the shelf by 6 pts.
-


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@17787 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2003-10-07 Enrico Sersale  <enrico@imago.ro>
+
+  * GWorkspace/GWorkspace.m
+    Added a "Do you really want to quit?" dialog 
+    in -applicationShouldTerminate:.
+    Added some keyEquivalents to the tabbed shelf menues.
+
+  * GWorkspace/TShelf/TShelfWin.m
+    Reduced the height of the shelf by 6 pts.
+    
 2003-10-06 Enrico Sersale  <enrico@imago.ro>
 
   * GWorkspace/Desktop/DesktopView.m
