2003-10-07 Enrico Sersale  <enrico@imago.ro>
  * GWorkspace/Resources/Icons/
    Added: Pboard.tiff, colorPboard.tiff, filecontsPboard.tiff,
    gormPboard.tiff, rtfPboard.tiff, rtfdPboard.tiff, stringPboard.tiff,
    tiffPboard.tiff.
-


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@17791 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2003-10-07 Enrico Sersale  <enrico@imago.ro>
 
+  * GWorkspace/Resources/Icons/
+    Added: Pboard.tiff, colorPboard.tiff, filecontsPboard.tiff, 
+    gormPboard.tiff, rtfPboard.tiff, rtfdPboard.tiff, stringPboard.tiff, 
+    tiffPboard.tiff.
+
   * GWorkspace/GWorkspace.m
     Added a "Do you really want to quit?" dialog 
     in -applicationShouldTerminate:.
