2003-10-07 Enrico Sersale  <enrico@imago.ro>
  * GWorkspace/TShelf/TShelfPBIcon.h GWorkspace/TShelf/TShelfPBIcon.m
    New files.
-


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@17792 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2003-10-07 Enrico Sersale  <enrico@imago.ro>
 
+  * GWorkspace/TShelf/TShelfPBIcon.h GWorkspace/TShelf/TShelfPBIcon.m
+    New files. 
+
   * GWorkspace/Resources/Icons/
     Added: Pboard.tiff, colorPboard.tiff, filecontsPboard.tiff, 
     gormPboard.tiff, rtfPboard.tiff, rtfdPboard.tiff, stringPboard.tiff, 
