--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-10-09 Enrico Sersale  <enrico@imago.ro>
+
+  * Added support for cut, copy and paste operation to the Tabbed Shelf. 
+
 2003-10-07 Enrico Sersale  <enrico@imago.ro>
 
   * GWorkspace/TShelf/TShelfPBIcon.h GWorkspace/TShelf/TShelfPBIcon.m
