2003-10-10 Enrico Sersale  <enrico@imago.ro>
  * ContentViewers/PasteboardViewer
    New contents viewer inspector.
-


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@17813 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
-2003-10-09 Enrico Sersale  <enrico@imago.ro>
+2003-10-10 Enrico Sersale  <enrico@imago.ro>
+  
+  * ContentViewers/PasteboardViewer
+    New contents viewer inspector.
 
+2003-10-09 Enrico Sersale  <enrico@imago.ro>
+  
   * Added support for cut, copy and paste operation to the Tabbed Shelf. 
 
 2003-10-07 Enrico Sersale  <enrico@imago.ro>
