2003-10-10 Enrico Sersale  <enrico@imago.ro>
  * ContentViewers/PasteboardViewer/PasteboardViewer.m
    Enabled. Actually it works with many Gorm objects.
    Problems with: NSBrowser, NSTableView, NSOutlineView and NSPopUpMenu.
-


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@17826 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2003-10-10 Enrico Sersale  <enrico@imago.ro>
   
+  * ContentViewers/PasteboardViewer/PasteboardViewer.m
+    Enabled. Actually it works with many Gorm objects.
+    Problems with: NSBrowser, NSTableView, NSOutlineView and NSPopUpMenu.
+
+2003-10-10 Enrico Sersale  <enrico@imago.ro>
+  
   * ContentViewers/PasteboardViewer
     New contents viewer inspector.
 
