2003-10-13 Enrico Sersale  <enrico@imago.ro>
  * ContentViewers/PasteboardViewer/PasteboardViewer.m
    Added a dummy implementation of
    GormNSBrowser, GormNSTableView, GormNSOutlineView, GormNSMenu,
    GormNSPopUpButtonCell and GormNSPopUpButton
    Now the viewer seems to works with all the Gorm objects.
-


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@17834 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-10-13 Enrico Sersale  <enrico@imago.ro>
+  
+  * ContentViewers/PasteboardViewer/PasteboardViewer.m
+    Added a dummy implementation of
+    GormNSBrowser, GormNSTableView, GormNSOutlineView, GormNSMenu,
+    GormNSPopUpButtonCell and GormNSPopUpButton
+    Now the viewer seems to works with all the Gorm objects.
+
 2003-10-10 Enrico Sersale  <enrico@imago.ro>
   
   * ContentViewers/PasteboardViewer/PasteboardViewer.m
