2003-10-15 Enrico Sersale  <enrico@imago.ro>
  * a new root viewer created has now the same shelf content of the first one.


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@17875 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-10-15 Enrico Sersale  <enrico@imago.ro>
+  
+  * a new root viewer created has now the same shelf content of the first one.
+
 2003-10-14 Enrico Sersale  <enrico@imago.ro>
   
   * Info->Preferences->Hidden files
