* now the miniwindow icons reflect current directory icon     instead of view type.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@17882 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,10 @@
 2003-10-15 Enrico Sersale  <enrico@imago.ro>
+
+  * now the miniwindow icons reflect current directory icon 
+    instead of view type.
   
   * a new root viewer created has now the same shelf content of the first one.
-
+ 
 2003-10-14 Enrico Sersale  <enrico@imago.ro>
   
   * Info->Preferences->Hidden files
