--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-16 Enrico Sersale  <enrico@imago.ro>
+
+  * ContentViewers/AppViewer/AppViewer.m
+    shows also the extensions.
+
 2003-10-15 Enrico Sersale  <enrico@imago.ro>
 
   * now the miniwindow icons reflect current directory icon 
