--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-17 Enrico Sersale  <enrico@imago.ro>
+
+  * A new Viewer opened on "/" now saves in the defaults its own shelf content 
+    and doesn't use anymore the shelf content of the main viewer.
+
 2003-10-16 Enrico Sersale  <enrico@imago.ro>
 
   * Utilities/thumbnailer/thumbnailerInfo.plist
