--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-10-19 Enrico Sersale  <enrico@imago.ro>
+
+  * GWorkspace/Resources/Icons
+    Added some icons for Mac OS X.
+
+  * GWLib/externs.m
+    added icons names.
+
 2003-10-18 Enrico Sersale  <enrico@imago.ro>
 
   * GWorkspace/FileOperations/FileOperation.m
