2003-10-22 Enrico Sersale  <enrico@imago.ro>
  * All the DraggingSources now consider also the offset in
    -dragImage:at:offset:event:pasteboard:source:slideBack:
    (on GNUstep this does nothing but I need this for osx)


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@17952 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-10-22 Enrico Sersale  <enrico@imago.ro>
+
+  * All the DraggingSources now consider also the offset in
+    -dragImage:at:offset:event:pasteboard:source:slideBack:
+    (on GNUstep this does nothing but I need it for osx)
+
 2003-10-19 Enrico Sersale  <enrico@imago.ro>
 
   * GWorkspace/Resources/Icons
