2003-10-23 Enrico Sersale  <enrico@imago.ro>
  * GWorkspace/FileOperations/FileOperation.m
    in -doDuplicate changed the suffix "_copy" appended to the file name
    to a prepended string, that is, "copy_of_".


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@17959 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-10-23 Enrico Sersale  <enrico@imago.ro>
+
+  * GWorkspace/FileOperations/FileOperation.m
+    in -doDuplicate changed the suffix "_copy" appended to the file name
+    to a prepended string, that is, "copy_of_".
+
 2003-10-22 Enrico Sersale  <enrico@imago.ro>
 
   * All the DraggingSources now consider also the offset in
