2003-10-25 Enrico Sersale  <enrico@imago.ro>
  * GWorkspace/TShelf/TShelfIconsView.m
    creates pasteboard icons also from dnd.


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@17975 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-25 Enrico Sersale  <enrico@imago.ro>
+
+  * GWorkspace/TShelf/TShelfIconsView.m
+    creates pasteboard icons also from dnd.
+
 2003-10-24 Enrico Sersale  <enrico@imago.ro>
 
   * GWorkspace/TShelf/TShelfView.m
