2003-10-28 Enrico Sersale  <enrico@imago.ro>
  * GWorkspace/Resources
    removed some duplicate files.

-


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@17991 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-10-28 Enrico Sersale  <enrico@imago.ro>
+
+  * GWorkspace/Resources
+    removed some duplicate files.
+
 2003-10-25 Enrico Sersale  <enrico@imago.ro>
 
   * GWorkspace/TShelf/TShelfIconsView.m
