2003-10-28 Enrico Sersale  <enrico@imago.ro>
  * ClipBook
    new subproject.
-


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@17992 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2003-10-28 Enrico Sersale  <enrico@imago.ro>
 
+  * ClipBook
+    new subproject.
+
   * GWorkspace/Resources
     removed some duplicate files.
 
