--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,15 @@
+2003-10-29 Enrico Sersale  <enrico@imago.ro>
+
+  * ClipBook/ClipBookWindow.m
+    added the DraggingDestination methods and removed them from the subviews.
+    added support for the NSColorPboardType type.
+
+  * ContentViewers/PasteboardViewer/PasteboardViewer.m
+    added support for the NSColorPboardType pasteboard type.
+
 2003-10-28 Enrico Sersale  <enrico@imago.ro>
+
+  * Version 0.6.1
 
   * ClipBook
     new subproject.
