2003-10-29 Enrico Sersale  <enrico@imago.ro>
  * Version 0.6.2

  * GWorkspace/GWorkspace.m
    check the defaults for "NoWarnOnQuit"


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@18005 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 2003-10-29 Enrico Sersale  <enrico@imago.ro>
+  
+  * Version 0.6.2
+
+  * GWorkspace/GWorkspace.m
+    check the defaults for "NoWarnOnQuit"
 
   * ClipBook/ClipBookWindow.m
     added the DraggingDestination methods and removed them from the subviews.
