2003-10-30 Enrico Sersale  <enrico@imago.ro>
  * GWorkspace/Recycler/Recycler.m
    the DraggingDestination is now the window.

  * ContentViewers/PdfViewer/PdfViewer.m
    applied a patch (by Charles Philip Chan <cpchan@sympatico.ca>)
    to make the pdf Inspector work with Ghostscript 8.

  * GWorkspace/main.m
    the key equivalent for "Quit" is now "Q".


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@18009 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2003-10-30 Enrico Sersale  <enrico@imago.ro>
+  
+  * GWorkspace/Recycler/Recycler.m
+    the DraggingDestination is now the window.
+
+  * ContentViewers/PdfViewer/PdfViewer.m
+    applied a patch (by Charles Philip Chan <cpchan@sympatico.ca>) 
+    to make the pdf Inspector work with Ghostscript 8.
+
+  * GWorkspace/main.m
+    the key equivalent for "Quit" is now "Q".
+    
 2003-10-29 Enrico Sersale  <enrico@imago.ro>
   
   * Version 0.6.2
