2003-11-05 Enrico Sersale  <enrico@imago.ro>
  * GWorkspace/Fiend/Fiend.m
    GWorkspace/FiendLeaf/FiendLeaf.m
    added DraggingDestination methods to the window.


git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@18053 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2003-11-05 Enrico Sersale  <enrico@imago.ro>
+  
+  * GWorkspace/Fiend/Fiend.m
+    GWorkspace/FiendLeaf/FiendLeaf.m
+    added DraggingDestination methods to the window.
+
 2003-10-30 Enrico Sersale  <enrico@imago.ro>
   
   * GWorkspace/Recycler/Recycler.m
