--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-11-06 Enrico Sersale  <enrico@imago.ro>
+  
+  * GWLib/FSWatcher.m
+    added a NSNotificationQueue.
+
 2003-11-05 Enrico Sersale  <enrico@imago.ro>
   
   * GWorkspace/Fiend/Fiend.m
