*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@18263 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2003-12-10 Enrico Sersale  <enrico@imago.ro>
+  
+  * added the "GWRemoteFilenamesPboardType" in all the classes 
+    that implements the DraggingDestination protocol
+
+  * GWLib/GWLib.h 
+    GWLib/GWLib.m
+    -concludeRemoteFilesDragOperation: new method.
+
 2003-11-06 Enrico Sersale  <enrico@imago.ro>
   
   * GWLib/FSWatcher.m
