--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2004-01-16 Enrico Sersale  <enrico@imago.ro>
+  
+  * Viewers/IconsViewer/IconsPanel.m
+    Viewers/IconsViewer/IconsPath.m
+    Viewers/IconsViewer/IconsViewer.m
+    Viewers/SmallIconsViewer/SmallIcon.m
+    Viewers/SmallIconsViewer/SmallIconsPanel.m
+    Viewers/SmallIconsViewer/SmallIconsViewer.m
+    applied patch by S.J. Chun <chunsj@embian.com> to not access superviews
+    before they are set.
+
 2003-12-10 Enrico Sersale  <enrico@imago.ro>
   
   * added the "GWRemoteFilenamesPboardType" in all the classes 
