--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-01-22 Enrico Sersale  <enrico@imago.ro>
+  
+  * GWorkspace/Inspectors/Tools.m
+    fixed a bug that crashed the app because a view created in Gorm
+    was not retained before releasing its window.
+  
+  * applied patch by Matt Rice <ratmice@yahoo.com> that changes the usage of
+    setStringValue: on many NSButtons to setTitle.
+
 2004-01-16 Enrico Sersale  <enrico@imago.ro>
   
   * Viewers/IconsViewer/IconsPanel.m
