*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@18460 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2004-01-23 Enrico Sersale  <enrico@imago.ro>
+  
+  * GWorkspace/GWSplitView.m
+    -updateDiskSpaceInfo: rewritten.
+
+  * Viewers/IconsViewer/PathIcon.m
+    -mouseUp: implemented.
+
+  * GWLib/Browser2.m
+    in -unselectNameEditor redraw the editor rect only if nameEditor
+    exists in the subviews.
+
 2004-01-22 Enrico Sersale  <enrico@imago.ro>
   
   * GWorkspace/Inspectors/Tools.m
