--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-24 Enrico Sersale  <enrico@imago.ro>
+  
+  * GWNet
+    new subproject
+    GWNet is a smb and ftp file viewer.
+
+  * Version 0.6.3
+
 2004-01-23 Enrico Sersale  <enrico@imago.ro>
   
   * GWorkspace/GWSplitView.m
