*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@18508 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-25 Enrico Sersale  <enrico@imago.ro>
+  
+  * GWNet
+    changed NSSocketPort with NSPort in all the places.
+
 2004-01-24 Enrico Sersale  <enrico@imago.ro>
   
   * GWNet
