*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@18527 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2004-02-02 Enrico Sersale  <enrico@imago.ro>
+  
+  * Utilities/fswatcher
+    new subproject.
+    the fswatcher tool is a daemon that notifies the registered applications 
+    when the contents of a directory have changed.
+
+  * GWLib/FSWatcher.[h m]
+    removed.
+
 2004-01-25 Enrico Sersale  <enrico@imago.ro>
   
   * GWNet
