*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@18531 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-02-03 Enrico Sersale  <enrico@imago.ro>
+  
+  * configure.ac
+    check for $GNUSTEP_SYSTEM_ROOT to be sure GNUstep.sh has been sourced.
+    (patch by Dennis Leeuw <dleeuw@made-it.com>)
+
 2004-02-02 Enrico Sersale  <enrico@imago.ro>
   
   * Utilities/fswatcher
