*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@18552 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-02-07 Enrico Sersale  <enrico@imago.ro>
+  
+  * Utilities/thumbnailer/ImageThumbnailer/ImageThumbnailer.
+    bug fixed in -makeThumbnailForPath: (the width of the image is set
+    correctly)
+
 2004-02-03 Enrico Sersale  <enrico@imago.ro>
   
   * configure.ac
