*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@18719 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
 
+2004-02-29 Enrico Sersale  <enrico@imago.ro>
+  
+  * Inspector
+    new application that takes the place of the Inspectors Panel.
+    GWorkspace/Inspectors/* removed.
+
 2004-02-07 Enrico Sersale  <enrico@imago.ro>
   
   * Utilities/thumbnailer/ImageThumbnailer/ImageThumbnailer.
