*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@18982 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 
+2004-03-31 Enrico Sersale  <enrico@imago.ro>
+  
+  * configure.ac
+    better detection of PDFKit.
+
 2004-03-08 Enrico Sersale  <enrico@imago.ro>
   
   * Operation
