--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-14 Enrico Sersale  <enrico@imago.ro>
+  
+  * Finder
+    new application that takes the place of old Finder window.
 
 2004-03-31 Enrico Sersale  <enrico@imago.ro>
   
