--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-16 Enrico Sersale  <enrico@imago.ro>
+  
+  * Desktop
+    new application that takes the place of old Desktop window.
+
 2004-04-14 Enrico Sersale  <enrico@imago.ro>
   
   * Finder
