*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@19415 72102866-910b-0410-8b05-ffd578937521

--- a/INSTALL
+++ b/INSTALL
@@ -4,7 +4,14 @@ Installing GWorkspace
 GWorkspace requires GNUstep to be installed. Make sure that you have an
 up to date version on your system installed! 
 
-		cd GWorkspace
+Some classes needs the FSNode framework so you need to install this first:
+    
+    cd FSNode
+    make install
+
+now you can build the other things:
+
+		cd ../
     ./configure
 		make install
 
