--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-06-04 Enrico Sersale  <enrico@imago.ro>
+  
+  * Version 0.6.5
+
 2004-05-16 Enrico Sersale  <enrico@imago.ro>
   
   * Desktop
