--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-06-15 Enrico Sersale  <enrico@imago.ro>
+  
+  * Recycler
+    new application to use the recycler without running Desktop.
+
 2004-06-04 Enrico Sersale  <enrico@imago.ro>
   
   * Version 0.6.5
