*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@20105 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-09-22 Enrico Sersale  <enrico@imago.ro>
+  
+  * The old file viewers have been removed. Activated the new FSNode based
+    viewers.
+    GWLib removed.
+
 2004-06-15 Enrico Sersale  <enrico@imago.ro>
   
   * Recycler
