*** empty log message ***
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/apps/gworkspace/trunk@22207 72102866-910b-0410-8b05-ffd578937521

--- a/ClipBook/Resources/English.lproj/Localizable.strings
+++ b/ClipBook/Resources/English.lproj/Localizable.strings
@@ -152,7 +152,7 @@
   = "Sort method applies to the\ncontents of the selected folder,\nNOT to its parent folder";
 "Sort by" = "Sort by";
 "Name" = "Name";
-"Kind" = "Kind";
+"Type" = "Type";
 "Date" = "Date";
 "Size" = "Size";
 "Owner" = "Owner";
